// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Input examples CharacterCounterInputComponent should render correctly 1`] = `
<div>
  <span
    class="v-typography-label"
    vtypography="label"
  >
    * indicates a required field
  </span>
  <div
    class="v-gap-4 v-flex v-flex-col v-mt-16"
    vflex=""
    vflexcol=""
    vgap="4"
    vmt="16"
  >
    <label
      class="v-label"
      for="character-counter-error"
      id="a-v-label-0"
      v-label=""
    >
      * Label
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <textarea
        aria-describedby="character-counter-initial-message character-counter-progress-message character-counter-error-message"
        aria-invalid="false"
        class="v-input v-input-resize-none"
        id="character-counter-error"
        noresize=""
        rows="4"
        v-input=""
        value=""
      />
      
    </div>
    <div
      class="v-input-message v-gap-0 v-flex v-flex-col"
      v-input-message=""
      vflex=""
      vflexcol=""
      vgap="0"
    >
      <span
        id="character-counter-initial-message"
      >
        400 characters remaining
        
      </span>
      <span
        aria-live="polite"
        id="character-counter-progress-message"
      >
        
      </span>
      <span
        aria-atomic="true"
        aria-live="assertive"
        class="v-gap-4 v-align-items-center v-flex v-flex-row"
        id="character-counter-error-message"
        valignitemscenter=""
        vflex=""
        vgap="4"
      >
        
        
      </span>
    </div>
  </div>
  <div
    class="v-gap-16 v-flex v-flex-row"
    vflex=""
    vgap="16"
  >
    <button
      class="v-button v-mt-8"
      type="button"
      v-button=""
      vmt="8"
    >
      Submit
    </button>
    <button
      buttoncolor="secondary"
      class="v-button v-button-secondary v-mt-8"
      type="button"
      v-button=""
      vmt="8"
    >
      Reset
    </button>
  </div>
</div>
`;

exports[`Input examples DefaultInputComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="default-input-single-line"
      id="a-v-label-0"
      v-label=""
    >
      Label (required)
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <input
        class="v-input"
        id="default-input-single-line"
        required=""
        v-input=""
        value=""
      />
      
    </div>
  </div>
</div>
`;

exports[`Input examples DisabledInputComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="default-disabled"
      id="a-v-label-0"
      v-label=""
    >
      Label (required)
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <input
        class="v-input"
        disabled="disabled"
        id="default-disabled"
        required=""
        v-input=""
        value=""
      />
      
    </div>
  </div>
  <div
    class="v-input-container v-mt-8"
    style="container-type: inline-size;"
    v-input-container=""
    vmt="8"
  >
    <input
      checked="checked"
      class="v-checkbox"
      id="disabled-checkbox"
      type="checkbox"
      v-checkbox=""
    />
    <label
      class="v-label"
      for="disabled-checkbox"
      id="a-v-label-1"
      v-label=""
    >
      Mark input as disabled
    </label>
    
  </div>
</div>
`;

exports[`Input examples ErrorInputComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="default-error"
      id="a-v-label-0"
      v-label=""
    >
      Label (required)
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <input
        aria-describedby="default-error-message"
        aria-invalid="false"
        class="v-input"
        id="default-error"
        required=""
        v-input=""
        value=""
      />
      
    </div>
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="v-input-message"
      id="default-error-message"
      v-input-message=""
    >
      
    </span>
  </div>
  <div
    class="v-gap-16 v-flex v-flex-row"
    vflex=""
    vgap="16"
  >
    <button
      class="v-button v-mt-8"
      type="button"
      v-button=""
      vmt="8"
    >
      Submit
    </button>
    <button
      buttoncolor="secondary"
      class="v-button v-button-secondary v-mt-8"
      type="button"
      v-button=""
      vmt="8"
    >
      Reset
    </button>
  </div>
</div>
`;

exports[`Input examples InitialValueInputComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="initial-input"
      id="a-v-label-0"
      v-label=""
    >
      Label (required)
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <input
        class="v-input"
        id="initial-input"
        required=""
        v-input=""
        value="Initial value"
      />
      
    </div>
  </div>
</div>
`;

exports[`Input examples InlineInputComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-align-items-start v-flex v-flex-row v-flex-wrap"
    valignitemsstart=""
    vflex=""
    vflexwrap=""
    vgap="4"
  >
    <label
      class="v-label"
      for="inline-input"
      id="a-v-label-0"
      style="line-height: var(--v-input-container-block-size);"
      v-label=""
    >
      Label (required)
    </label>
    <div
      class="v-gap-4 v-flex v-flex-col v-flex-grow"
      vflex=""
      vflexcol=""
      vflexgrow=""
      vgap="4"
    >
      <div
        class="v-input-container v-surface"
        v-input-container=""
      >
        <input
          aria-describedby="inline-input-message"
          class="v-input"
          id="inline-input"
          required=""
          v-input=""
          value=""
        />
        
      </div>
      <span
        class="v-input-message"
        id="inline-input-message"
        v-input-message=""
      >
        This is optional text that describes the label in more detail.
      </span>
    </div>
  </div>
</div>
`;

exports[`Input examples InlineMessageInputComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="inline-message-input"
      id="a-v-label-0"
      v-label=""
    >
      Label (required)
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <input
        aria-describedby="inline-message"
        class="v-input"
        id="inline-message-input"
        required=""
        v-input=""
        value=""
      />
      
    </div>
    <span
      class="v-input-message"
      id="inline-message"
      v-input-message=""
    >
      This is optional text that describes the label in more detail.
    </span>
  </div>
</div>
`;

exports[`Input examples LeadingIconInputComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="leading-icon-input"
      id="a-v-label-0"
      v-label=""
    >
      Label (required)
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <span
        class="v-flex v-flex-col v-justify-content-center v-typography-body-2-bold"
        vflex=""
        vflexcol=""
        vjustifycontentcenter=""
        vtypography="body-2-bold"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-account v-icon-low v-icon-visa"
          focusable="false"
          height="24"
          v-icon-visa-account-low=""
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            class="v-icon-secondary"
            d="M12 12C17.5228 12 22 16.4772 22 22V24H20V22C20 17.5817 16.4183 14 12 14C7.58172 14 4 17.5817 4 22V24H2V22C2 16.4772 6.47715 12 12 12Z"
          />
          <path
            class="v-icon-primary"
            d="M12 0C14.7614 0 17 2.23858 17 5C17 7.76142 14.7614 10 12 10C9.23858 10 7 7.76142 7 5C7 2.23858 9.23858 0 12 0ZM12 2C10.3431 2 9 3.34315 9 5C9 6.65685 10.3431 8 12 8C13.6569 8 15 6.65685 15 5C15 3.34315 13.6569 2 12 2Z"
          />
        </svg>
      </span>
      <input
        class="v-input"
        id="leading-icon-input"
        required=""
        v-input=""
        value=""
      />
      
    </div>
  </div>
</div>
`;

exports[`Input examples ModelDrivenFbInputComponent should render correctly 1`] = `
<div>
  <form
    class="ng-untouched ng-pristine ng-invalid v-gap-16 v-flex v-flex-col"
    novalidate=""
    vflex=""
    vflexcol=""
    vgap="16"
  >
    <div
      class="v-gap-4 v-flex v-flex-col"
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <label
        class="v-label"
        for="model-fb-input-1"
        id="a-v-label-0"
        v-label=""
      >
        Label (required)
      </label>
      <div
        class="v-input-container v-surface"
        v-input-container=""
      >
        <input
          aria-describedby="model-fb-input-message-1"
          aria-invalid="false"
          class="v-input ng-untouched ng-pristine ng-invalid"
          formcontrolname="input1"
          id="model-fb-input-1"
          v-input=""
          value=""
        />
        
      </div>
      <span
        aria-atomic="true"
        aria-live="assertive"
        class="v-input-message"
        id="model-fb-input-message-1"
        v-input-message=""
      >
        
      </span>
    </div>
    <div
      class="v-gap-4 v-flex v-flex-col"
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <label
        class="v-label"
        for="model-fb-input-2"
        id="a-v-label-1"
        v-label=""
      >
        Label (required)
      </label>
      <div
        class="v-input-container v-surface"
        v-input-container=""
      >
        <input
          aria-describedby="model-fb-input-message-2"
          aria-invalid="false"
          class="v-input ng-untouched ng-pristine ng-invalid"
          formcontrolname="input2"
          id="model-fb-input-2"
          v-input=""
          value=""
        />
        
      </div>
      <span
        aria-atomic="true"
        aria-live="assertive"
        class="v-input-message"
        id="model-fb-input-message-2"
        v-input-message=""
      >
        
      </span>
    </div>
    <div
      class="v-gap-4 v-flex v-flex-col"
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <label
        class="v-label"
        for="model-fb-input-3"
        id="a-v-label-2"
        v-label=""
      >
        Label (required)
      </label>
      <div
        class="v-input-container v-surface"
        v-input-container=""
      >
        <input
          aria-describedby="model-fb-input-message-3"
          aria-invalid="false"
          class="v-input ng-untouched ng-pristine ng-invalid"
          formcontrolname="input3"
          id="model-fb-input-3"
          v-input=""
          value=""
        />
        
      </div>
      <span
        aria-atomic="true"
        aria-live="assertive"
        class="v-input-message"
        id="model-fb-input-message-3"
        v-input-message=""
      >
        
      </span>
    </div>
    <div
      class="v-gap-16 v-flex v-flex-row v-mt-8"
      vflex=""
      vgap="16"
      vmt="8"
    >
      <button
        class="v-button"
        type="submit"
        v-button=""
      >
        Submit
      </button>
      <button
        buttoncolor="secondary"
        class="v-button v-button-secondary"
        type="reset"
        v-button=""
      >
         Reset 
      </button>
    </div>
  </form>
</div>
`;

exports[`Input examples ModelDrivenFormInputComponent should render correctly 1`] = `
<div>
  <form
    class="ng-untouched ng-pristine ng-invalid v-gap-16 v-flex v-flex-col"
    novalidate=""
    vflex=""
    vflexcol=""
    vgap="16"
  >
    <div
      class="v-gap-4 v-flex v-flex-col"
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <label
        class="v-label"
        for="model-input-1"
        id="a-v-label-0"
        v-label=""
      >
        Label (required)
      </label>
      <div
        class="v-input-container v-surface"
        v-input-container=""
      >
        <input
          aria-describedby="model-input-message-1"
          aria-invalid="false"
          class="v-input ng-untouched ng-pristine ng-invalid"
          id="model-input-1"
          v-input=""
          value=""
        />
        
      </div>
      <span
        aria-atomic="true"
        aria-live="assertive"
        class="v-input-message"
        id="model-input-message-1"
        v-input-message=""
      >
        
      </span>
    </div>
    <div
      class="v-gap-4 v-flex v-flex-col"
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <label
        class="v-label"
        for="model-input-2"
        id="a-v-label-1"
        v-label=""
      >
        Label (required)
      </label>
      <div
        class="v-input-container v-surface"
        v-input-container=""
      >
        <input
          aria-describedby="model-input-message-2"
          aria-invalid="false"
          class="v-input ng-untouched ng-pristine ng-invalid"
          id="model-input-2"
          v-input=""
          value=""
        />
        
      </div>
      <span
        aria-atomic="true"
        aria-live="assertive"
        class="v-input-message"
        id="model-input-message-2"
        v-input-message=""
      >
        
      </span>
    </div>
    <div
      class="v-gap-4 v-flex v-flex-col"
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <label
        class="v-label"
        for="model-input-3"
        id="a-v-label-2"
        v-label=""
      >
        Label (required)
      </label>
      <div
        class="v-input-container v-surface"
        v-input-container=""
      >
        <input
          aria-describedby="model-input-message-3"
          aria-invalid="false"
          class="v-input ng-untouched ng-pristine ng-invalid"
          id="model-input-3"
          v-input=""
          value=""
        />
        
      </div>
      <span
        aria-atomic="true"
        aria-live="assertive"
        class="v-input-message"
        id="model-input-message-3"
        v-input-message=""
      >
        
      </span>
    </div>
    <div
      class="v-gap-16 v-flex v-flex-row v-mt-8"
      vflex=""
      vgap="16"
      vmt="8"
    >
      <button
        class="v-button"
        type="submit"
        v-button=""
      >
        Submit
      </button>
      <button
        buttoncolor="secondary"
        class="v-button v-button-secondary"
        type="reset"
        v-button=""
      >
        Reset
      </button>
    </div>
  </form>
</div>
`;

exports[`Input examples ModelDrivenInputComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="model-input"
      id="a-v-label-0"
      v-label=""
    >
      Label (required)
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <input
        class="v-input ng-untouched ng-pristine ng-valid"
        id="model-input"
        required=""
        v-input=""
        value="Initial value"
      />
      
    </div>
  </div>
  <code>
    Value: Initial value
  </code>
</div>
`;

exports[`Input examples OneTimePasscodeInputComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="one-time-passcode"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-surface"
      style="inline-size: 160px;"
      v-input-container=""
    >
      <input
        class="v-input v-input-otp"
        id="one-time-passcode"
        otp=""
        v-input=""
        value=""
      />
      
    </div>
  </div>
</div>
`;

exports[`Input examples PrefixInputComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="prefix-input"
      id="a-v-label-0"
      v-label=""
    >
      Label (required)
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <span
        class="v-typography-body-2-bold"
        id="prefix-example-character"
        vtypography="body-2-bold"
      >
        $
      </span>
      <input
        aria-describedby="prefix-example-character"
        class="v-input"
        id="prefix-input"
        v-input=""
        value=""
      />
      
    </div>
  </div>
</div>
`;

exports[`Input examples ReadOnlyInputComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="default-readonly"
      id="a-v-label-0"
      v-label=""
    >
      Label (required)
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <input
        class="v-input"
        id="default-readonly"
        readonly="readonly"
        required=""
        v-input=""
        value="Read-only example text."
      />
      
    </div>
  </div>
  <div
    class="v-input-container v-mt-8"
    style="container-type: inline-size;"
    v-input-container=""
    vmt="8"
  >
    <input
      checked="checked"
      class="v-checkbox"
      id="readonly-checkbox"
      type="checkbox"
      v-checkbox=""
    />
    <label
      class="v-label"
      for="readonly-checkbox"
      id="a-v-label-1"
      v-label=""
    >
      Mark input as read-only
    </label>
    
  </div>
</div>
`;

exports[`Input examples ReusableInputDemo should render correctly 1`] = `
<div>
  <div
    class="v-gap-6 v-flex v-flex-col v-mt-24"
    vflexcol=""
    vgap="6"
    vmt="24"
  >
    <nova-reusable-input>
      <div
        class="v-gap-4 v-flex v-flex-col v-flex-wrap"
        vflex=""
        vflexwrap=""
        vgap="4"
      >
        <label
          class="v-label"
          for="a-reusable-input-0-input"
          id="a-v-label-0"
          v-label=""
        >
          Label 
        </label>
        <div
          class="v-gap-4 v-flex v-flex-col v-flex-grow"
          vflex=""
          vflexcol=""
          vflexgrow=""
          vgap="4"
        >
          <div
            class="v-input-container v-surface"
            v-input-container=""
          >
            
            
            
            <input
              aria-describedby="a-reusable-input-0-message"
              aria-invalid="false"
              class="v-input"
              id="a-reusable-input-0-input"
              step="null"
              type="text"
              v-input=""
              value=""
            />
            
            
            
            
            
            
          </div>
          
          <span
            aria-atomic="false"
            class="v-input-message"
            id="a-reusable-input-0-message"
            v-input-message=""
          >
            
             This is optional text that describes the label in more detail. 
            
          </span>
          
        </div>
      </div>
    </nova-reusable-input>
  </div>
  
  <nova-dynamic-reusable-form
    class="nova-dynamic-reusable-form"
  >
    <div
      class="v-panel v-ml-auto v-panel-expandable v-panel-responsive"
      responsive=""
      style="inline-size: 100%;"
      v-panel=""
      vml="auto"
    >
      <button
        aria-controls="responsive-expanded-panel"
        aria-expanded="true"
        aria-label="Customize demo panel"
        buttonsize="large"
        class="v-button v-panel-toggle v-sm-media-hide v-xs-media-hide v-button-icon v-button-large"
        type="button"
        v-button-icon=""
        v-panel-toggle=""
      >
        <svg
          aria-hidden="true"
          class="v-icon-two-color v-icon v-icon-media-fast-forward v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          style="--v-icon-secondary: var(--palette-default-active-accent);"
          v-icon-two-color=""
          v-icon-visa-media-fast-forward-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-secondary"
            d="M15 8L8.39355 15L7 13.5244L12.2139 8L7 2.47559L8.39355 1L15 8Z"
          />
          <path
            class="v-icon-primary"
            d="M9 8L2.39355 15L1 13.5244L6.21387 8L1 2.47559L2.39355 1L9 8Z"
          />
        </svg>
        
        
      </button>
      <div
        aria-hidden="false"
        class="v-panel-content v-surface v-flex v-flex-col"
        id="responsive-expanded-panel"
        v-panel-content=""
        vflex=""
        vflexcol=""
      >
        <header
          class="v-gap-4 v-flex v-flex-row v-justify-content-between"
          vflex=""
          vgap="4"
          vjustifycontentbetween=""
        >
          <h3
            class="v-typography-headline-4"
            vtypography="headline-4"
          >
            Customize demo
          </h3>
          <button
            aria-label="Close customize demo panel"
            buttoncolor="tertiary"
            buttonsize="small"
            class="v-button v-desktop-media-hide v-button-icon v-button-small v-button-subtle v-button-tertiary"
            subtle=""
            type="button"
            v-button-icon=""
            vmediahide="desktop"
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-close v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              v-icon-visa-close-tiny=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-primary"
                d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
              />
              <defs>
                <clippath>
                  <rect
                    height="16"
                    transform="translate(0 0.000488281)"
                    width="16"
                  />
                </clippath>
              </defs>
            </svg>
          </button>
        </header>
        <hr
          aria-hidden="true"
          class="v-divider v-divider-decorative v-flex-shrink-0 v-mb-20 v-mx-8"
          dividertype="decorative"
          v-divider=""
          vflexshrink0=""
          vmb="20"
          vmx="8"
        />
        <div
          class="v-panel-body v-flex v-flex-grow v-flex-row"
          v-panel-body=""
          vflex=""
          vflexgrow=""
        >
          <form
            class="v-gap-16 v-flex v-flex-col ng-untouched ng-pristine ng-valid"
            novalidate=""
            vflex=""
            vflexcol=""
            vgap="16"
          >
            <div
              class="reusable-form-field-wrapper v-gap-48 v-flex v-flex-row v-mb-32"
              vflex=""
              vgap="48"
              vmb="32"
            >
              <div
                class="v-gap-16 v-flex v-flex-col"
                style="inline-size: max-content;"
                vflex=""
                vflexcol=""
                vgap="16"
              >
                <h4
                  class="v-typography-subtitle-2"
                  vtypography="subtitle-2"
                >
                  Boolean properties
                </h4>
                <div
                  class="v-gap-16 v-flex v-flex-col v-flex-wrap"
                  vflex=""
                  vflexcol=""
                  vflexwrap=""
                  vgap="16"
                >
                  <div
                    class="v-gap-4 v-flex v-flex-col"
                    vflex=""
                    vflexcol=""
                    vgap="4"
                  >
                    <div
                      class="v-input-container v-align-items-start v-flex v-flex-row"
                      v-input-container=""
                      valignitemsstart=""
                      vflex=""
                    >
                      <input
                        class="v-checkbox ng-untouched ng-pristine ng-valid"
                        id="showActionButton"
                        type="checkbox"
                        v-checkbox=""
                      />
                      <div
                        class="v-gap-4 v-flex v-flex-col v-my-10"
                        vflex=""
                        vflexcol=""
                        vgap="4"
                        vmy="10"
                      >
                        <label
                          class="v-label"
                          for="showActionButton"
                          id="a-v-label-1"
                          v-label=""
                        >
                          Show action button
                        </label>
                        
                      </div>
                      
                    </div>
                  </div>
                  
                  
                  
                  
                  <div
                    class="v-gap-4 v-flex v-flex-col"
                    vflex=""
                    vflexcol=""
                    vgap="4"
                  >
                    <div
                      class="v-input-container v-align-items-start v-flex v-flex-row"
                      v-input-container=""
                      valignitemsstart=""
                      vflex=""
                    >
                      <input
                        class="v-checkbox ng-untouched ng-pristine ng-valid"
                        id="showCharacterCounter"
                        type="checkbox"
                        v-checkbox=""
                      />
                      <div
                        class="v-gap-4 v-flex v-flex-col v-my-10"
                        vflex=""
                        vflexcol=""
                        vgap="4"
                        vmy="10"
                      >
                        <label
                          class="v-label"
                          for="showCharacterCounter"
                          id="a-v-label-2"
                          v-label=""
                        >
                          Show character counter
                        </label>
                        
                      </div>
                      
                    </div>
                  </div>
                  
                  
                  
                  
                  <div
                    class="v-gap-4 v-flex v-flex-col"
                    vflex=""
                    vflexcol=""
                    vgap="4"
                  >
                    <div
                      class="v-input-container v-align-items-start v-flex v-flex-row"
                      v-input-container=""
                      valignitemsstart=""
                      vflex=""
                    >
                      <input
                        class="v-checkbox ng-untouched ng-pristine ng-valid"
                        id="showPlaceholder"
                        type="checkbox"
                        v-checkbox=""
                      />
                      <div
                        class="v-gap-4 v-flex v-flex-col v-my-10"
                        vflex=""
                        vflexcol=""
                        vgap="4"
                        vmy="10"
                      >
                        <label
                          class="v-label"
                          for="showPlaceholder"
                          id="a-v-label-3"
                          v-label=""
                        >
                          Show placeholder
                        </label>
                        
                      </div>
                      
                    </div>
                  </div>
                  
                  
                  
                  
                  <div
                    class="v-gap-4 v-flex v-flex-col"
                    vflex=""
                    vflexcol=""
                    vgap="4"
                  >
                    <div
                      class="v-input-container v-align-items-start v-flex v-flex-row"
                      v-input-container=""
                      valignitemsstart=""
                      vflex=""
                    >
                      <input
                        checked="checked"
                        class="v-checkbox ng-untouched ng-pristine ng-valid"
                        id="input-message"
                        type="checkbox"
                        v-checkbox=""
                      />
                      <div
                        class="v-gap-4 v-flex v-flex-col v-my-10"
                        vflex=""
                        vflexcol=""
                        vgap="4"
                        vmy="10"
                      >
                        <label
                          class="v-label"
                          for="input-message"
                          id="a-v-label-4"
                          v-label=""
                        >
                          Input message
                        </label>
                        
                      </div>
                      
                    </div>
                  </div>
                  
                  
                  
                  
                  <div
                    class="v-gap-4 v-flex v-flex-col"
                    vflex=""
                    vflexcol=""
                    vgap="4"
                  >
                    <div
                      class="v-input-container v-align-items-start v-flex v-flex-row"
                      v-input-container=""
                      valignitemsstart=""
                      vflex=""
                    >
                      <input
                        class="v-checkbox ng-untouched ng-pristine ng-valid"
                        id="clearable"
                        type="checkbox"
                        v-checkbox=""
                      />
                      <div
                        class="v-gap-4 v-flex v-flex-col v-my-10"
                        vflex=""
                        vflexcol=""
                        vgap="4"
                        vmy="10"
                      >
                        <label
                          class="v-label"
                          for="clearable"
                          id="a-v-label-5"
                          v-label=""
                        >
                          Clearable
                        </label>
                        
                      </div>
                      
                    </div>
                  </div>
                  
                  
                  
                  
                  <div
                    class="v-gap-4 v-flex v-flex-col"
                    vflex=""
                    vflexcol=""
                    vgap="4"
                  >
                    <div
                      class="v-input-container v-align-items-start v-flex v-flex-row"
                      v-input-container=""
                      valignitemsstart=""
                      vflex=""
                    >
                      <input
                        class="v-checkbox ng-untouched ng-pristine ng-valid"
                        id="disabled"
                        type="checkbox"
                        v-checkbox=""
                      />
                      <div
                        class="v-gap-4 v-flex v-flex-col v-my-10"
                        vflex=""
                        vflexcol=""
                        vgap="4"
                        vmy="10"
                      >
                        <label
                          class="v-label"
                          for="disabled"
                          id="a-v-label-6"
                          v-label=""
                        >
                          Disabled
                        </label>
                        
                      </div>
                      
                    </div>
                  </div>
                  
                  
                  
                  
                  <div
                    class="v-gap-4 v-flex v-flex-col"
                    vflex=""
                    vflexcol=""
                    vgap="4"
                  >
                    <div
                      class="v-input-container v-align-items-start v-flex v-flex-row"
                      v-input-container=""
                      valignitemsstart=""
                      vflex=""
                    >
                      <input
                        class="v-checkbox ng-untouched ng-pristine ng-valid"
                        id="inline"
                        type="checkbox"
                        v-checkbox=""
                      />
                      <div
                        class="v-gap-4 v-flex v-flex-col v-my-10"
                        vflex=""
                        vflexcol=""
                        vgap="4"
                        vmy="10"
                      >
                        <label
                          class="v-label"
                          for="inline"
                          id="a-v-label-7"
                          v-label=""
                        >
                          Inline
                        </label>
                        
                      </div>
                      
                    </div>
                  </div>
                  
                  
                  
                  
                  <div
                    class="v-gap-4 v-flex v-flex-col"
                    vflex=""
                    vflexcol=""
                    vgap="4"
                  >
                    <div
                      class="v-input-container v-align-items-start v-flex v-flex-row"
                      v-input-container=""
                      valignitemsstart=""
                      vflex=""
                    >
                      <input
                        class="v-checkbox ng-untouched ng-pristine ng-valid"
                        id="invalid"
                        type="checkbox"
                        v-checkbox=""
                      />
                      <div
                        class="v-gap-4 v-flex v-flex-col v-my-10"
                        vflex=""
                        vflexcol=""
                        vgap="4"
                        vmy="10"
                      >
                        <label
                          class="v-label"
                          for="invalid"
                          id="a-v-label-8"
                          v-label=""
                        >
                          Invalid
                        </label>
                        
                      </div>
                      
                    </div>
                  </div>
                  
                  
                  
                  
                  <div
                    class="v-gap-4 v-flex v-flex-col"
                    vflex=""
                    vflexcol=""
                    vgap="4"
                  >
                    <div
                      class="v-input-container v-align-items-start v-flex v-flex-row"
                      v-input-container=""
                      valignitemsstart=""
                      vflex=""
                    >
                      <input
                        class="v-checkbox ng-untouched ng-pristine ng-valid"
                        id="maskable"
                        type="checkbox"
                        v-checkbox=""
                      />
                      <div
                        class="v-gap-4 v-flex v-flex-col v-my-10"
                        vflex=""
                        vflexcol=""
                        vgap="4"
                        vmy="10"
                      >
                        <label
                          class="v-label"
                          for="maskable"
                          id="a-v-label-9"
                          v-label=""
                        >
                          Maskable
                        </label>
                        
                      </div>
                      
                    </div>
                  </div>
                  
                  
                  
                  
                  <div
                    class="v-gap-4 v-flex v-flex-col"
                    vflex=""
                    vflexcol=""
                    vgap="4"
                  >
                    <div
                      class="v-input-container v-align-items-start v-flex v-flex-row"
                      v-input-container=""
                      valignitemsstart=""
                      vflex=""
                    >
                      <input
                        class="v-checkbox ng-untouched ng-pristine ng-valid"
                        id="otp"
                        type="checkbox"
                        v-checkbox=""
                      />
                      <div
                        class="v-gap-4 v-flex v-flex-col v-my-10"
                        vflex=""
                        vflexcol=""
                        vgap="4"
                        vmy="10"
                      >
                        <label
                          class="v-label"
                          for="otp"
                          id="a-v-label-10"
                          v-label=""
                        >
                          OTP
                        </label>
                        
                      </div>
                      
                    </div>
                  </div>
                  
                  
                  
                  
                  <div
                    class="v-gap-4 v-flex v-flex-col"
                    vflex=""
                    vflexcol=""
                    vgap="4"
                  >
                    <div
                      class="v-input-container v-align-items-start v-flex v-flex-row"
                      v-input-container=""
                      valignitemsstart=""
                      vflex=""
                    >
                      <input
                        class="v-checkbox ng-untouched ng-pristine ng-valid"
                        id="readonly"
                        type="checkbox"
                        v-checkbox=""
                      />
                      <div
                        class="v-gap-4 v-flex v-flex-col v-my-10"
                        vflex=""
                        vflexcol=""
                        vgap="4"
                        vmy="10"
                      >
                        <label
                          class="v-label"
                          for="readonly"
                          id="a-v-label-11"
                          v-label=""
                        >
                          Readonly
                        </label>
                        
                      </div>
                      
                    </div>
                  </div>
                  
                  
                  
                  
                  <div
                    class="v-gap-4 v-flex v-flex-col"
                    vflex=""
                    vflexcol=""
                    vgap="4"
                  >
                    <div
                      class="v-input-container v-align-items-start v-flex v-flex-row"
                      v-input-container=""
                      valignitemsstart=""
                      vflex=""
                    >
                      <input
                        class="v-checkbox ng-untouched ng-pristine ng-valid"
                        id="required"
                        type="checkbox"
                        v-checkbox=""
                      />
                      <div
                        class="v-gap-4 v-flex v-flex-col v-my-10"
                        vflex=""
                        vflexcol=""
                        vgap="4"
                        vmy="10"
                      >
                        <label
                          class="v-label"
                          for="required"
                          id="a-v-label-12"
                          v-label=""
                        >
                          Required
                        </label>
                        
                      </div>
                      
                    </div>
                  </div>
                  
                  
                  
                  
                  <div
                    class="v-gap-4 v-flex v-flex-col"
                    vflex=""
                    vflexcol=""
                    vgap="4"
                  >
                    <div
                      class="v-input-container v-align-items-start v-flex v-flex-row"
                      v-input-container=""
                      valignitemsstart=""
                      vflex=""
                    >
                      <input
                        class="v-checkbox ng-untouched ng-pristine ng-valid"
                        id="showLeadingIcon"
                        type="checkbox"
                        v-checkbox=""
                      />
                      <div
                        class="v-gap-4 v-flex v-flex-col v-my-10"
                        vflex=""
                        vflexcol=""
                        vgap="4"
                        vmy="10"
                      >
                        <label
                          class="v-label"
                          for="showLeadingIcon"
                          id="a-v-label-13"
                          v-label=""
                        >
                          Show leading icon
                        </label>
                        
                      </div>
                      
                    </div>
                  </div>
                  
                  
                  
                  
                  <div
                    class="v-gap-4 v-flex v-flex-col"
                    vflex=""
                    vflexcol=""
                    vgap="4"
                  >
                    <div
                      class="v-input-container v-align-items-start v-flex v-flex-row"
                      v-input-container=""
                      valignitemsstart=""
                      vflex=""
                    >
                      <input
                        class="v-checkbox ng-untouched ng-pristine ng-valid"
                        id="showPrefix"
                        type="checkbox"
                        v-checkbox=""
                      />
                      <div
                        class="v-gap-4 v-flex v-flex-col v-my-10"
                        vflex=""
                        vflexcol=""
                        vgap="4"
                        vmy="10"
                      >
                        <label
                          class="v-label"
                          for="showPrefix"
                          id="a-v-label-14"
                          v-label=""
                        >
                          Show prefix
                        </label>
                        
                      </div>
                      
                    </div>
                  </div>
                  
                  
                  
                  
                  <div
                    class="v-gap-4 v-flex v-flex-col"
                    vflex=""
                    vflexcol=""
                    vgap="4"
                  >
                    <div
                      class="v-input-container v-align-items-start v-flex v-flex-row"
                      v-input-container=""
                      valignitemsstart=""
                      vflex=""
                    >
                      <input
                        class="v-checkbox ng-untouched ng-pristine ng-valid"
                        id="showSuffix"
                        type="checkbox"
                        v-checkbox=""
                      />
                      <div
                        class="v-gap-4 v-flex v-flex-col v-my-10"
                        vflex=""
                        vflexcol=""
                        vgap="4"
                        vmy="10"
                      >
                        <label
                          class="v-label"
                          for="showSuffix"
                          id="a-v-label-15"
                          v-label=""
                        >
                          Show suffix
                        </label>
                        
                      </div>
                      
                    </div>
                  </div>
                  
                  
                  
                  
                  <div
                    class="v-gap-4 v-flex v-flex-col"
                    vflex=""
                    vflexcol=""
                    vgap="4"
                  >
                    <div
                      class="v-input-container v-align-items-start v-flex v-flex-row"
                      v-input-container=""
                      valignitemsstart=""
                      vflex=""
                    >
                      <input
                        class="v-checkbox ng-untouched ng-pristine ng-valid"
                        id="textarea"
                        type="checkbox"
                        v-checkbox=""
                      />
                      <div
                        class="v-gap-4 v-flex v-flex-col v-my-10"
                        vflex=""
                        vflexcol=""
                        vgap="4"
                        vmy="10"
                      >
                        <label
                          class="v-label"
                          for="textarea"
                          id="a-v-label-16"
                          v-label=""
                        >
                          Textarea
                        </label>
                        
                      </div>
                      
                    </div>
                  </div>
                  
                  
                  
                  
                  <div
                    class="v-gap-4 v-flex v-flex-col"
                    vflex=""
                    vflexcol=""
                    vgap="4"
                  >
                    <div
                      class="v-input-container v-align-items-start v-flex v-flex-row"
                      v-input-container=""
                      valignitemsstart=""
                      vflex=""
                    >
                      <input
                        class="v-checkbox ng-untouched ng-pristine ng-valid"
                        id="resizable"
                        type="checkbox"
                        v-checkbox=""
                      />
                      <div
                        class="v-gap-4 v-flex v-flex-col v-my-10"
                        vflex=""
                        vflexcol=""
                        vgap="4"
                        vmy="10"
                      >
                        <label
                          class="v-label"
                          for="resizable"
                          id="a-v-label-17"
                          v-label=""
                        >
                          Resizable
                        </label>
                        
                      </div>
                      
                    </div>
                  </div>
                  
                  
                  
                  
                  
                </div>
              </div>
              <div
                class="v-gap-16 v-flex v-flex-col"
                style="inline-size: max-content;"
                vflex=""
                vflexcol=""
                vgap="16"
              >
                <h4
                  class="v-typography-subtitle-2"
                  vtypography="subtitle-2"
                >
                  Text/numeric properties
                </h4>
                <div
                  class="v-gap-16 v-flex v-flex-col v-flex-wrap"
                  vflex=""
                  vflexcol=""
                  vflexwrap=""
                  vgap="16"
                >
                  
                  <div
                    class="v-gap-4 v-flex v-flex-col"
                    vflex=""
                    vflexcol=""
                    vgap="4"
                  >
                    <label
                      class="v-label"
                      for="label"
                      id="a-v-label-18"
                      v-label=""
                    >
                      Label
                    </label>
                    <div
                      class="v-input-container v-surface"
                      v-input-container=""
                    >
                      <textarea
                        cdktextareaautosize=""
                        class="v-input cdk-textarea-autosize ng-untouched ng-pristine ng-valid"
                        id="label"
                        rows="1"
                        style="max-block-size: 200px;"
                        v-input=""
                        value="Label"
                      />
                      
                    </div>
                    
                  </div>
                  
                  
                  
                  
                  <div
                    class="v-gap-4 v-flex v-flex-col"
                    vflex=""
                    vflexcol=""
                    vgap="4"
                  >
                    <label
                      class="v-label"
                      for="message"
                      id="a-v-label-19"
                      v-label=""
                    >
                      Message
                    </label>
                    <div
                      class="v-input-container v-surface"
                      v-input-container=""
                    >
                      <textarea
                        cdktextareaautosize=""
                        class="v-input cdk-textarea-autosize ng-untouched ng-pristine ng-valid"
                        id="message"
                        rows="1"
                        style="max-block-size: 200px;"
                        v-input=""
                        value="This is optional text that describes the label in more detail."
                      />
                      
                    </div>
                    
                  </div>
                  
                  
                  
                  
                  
                  
                  <div
                    class="v-gap-4 v-flex v-flex-col"
                    vflex=""
                    vflexcol=""
                    vgap="4"
                  >
                    <label
                      class="v-label"
                      for="type"
                      id="a-v-label-20"
                      v-label=""
                    >
                      Type
                    </label>
                    <div
                      class="v-input-container v-surface"
                      v-input-container=""
                    >
                      <select
                        class="v-input ng-untouched ng-pristine ng-valid"
                        id="type"
                        v-select=""
                      >
                        <option
                          value="text"
                        >
                          Text
                        </option>
                        <option
                          value="number"
                        >
                          Number
                        </option>
                        <option
                          value="email"
                        >
                          Email
                        </option>
                        <option
                          value="tel"
                        >
                          Tel
                        </option>
                        <option
                          value="url"
                        >
                          URL
                        </option>
                        <option
                          value="password"
                        >
                          Password
                        </option>
                        <option
                          value="search"
                        >
                          Search
                        </option>
                        
                      </select>
                      <div
                        class="v-input-control"
                      >
                        <svg
                          aria-hidden="true"
                          class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
                          focusable="false"
                          height="16"
                          v-icon-visa-chevron-down-tiny=""
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <path
                            class="v-icon-primary"
                            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
                          />
                        </svg>
                      </div>
                      
                    </div>
                    
                  </div>
                  
                  
                </div>
              </div>
              
            </div>
            
            <div
              class="v-gap-16 v-flex v-flex-row v-mb-16 v-ml-auto"
              vflex=""
              vgap="16"
              vmb="16"
              vml="auto"
            >
              <button
                class="v-button"
                type="submit"
                v-button=""
              >
                Apply
              </button>
              <button
                buttoncolor="secondary"
                class="v-button v-button-secondary"
                type="button"
                v-button=""
              >
                Reset
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </nova-dynamic-reusable-form>
</div>
`;

exports[`Input examples SuffixInputComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="suffix-input"
      id="a-v-label-0"
      v-label=""
    >
      Label (required)
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <input
        aria-describedby="suffix-example-character"
        class="v-input"
        id="suffix-input"
        v-input=""
        value=""
      />
      <span
        class="v-typography-body-2-bold"
        id="suffix-example-character"
        vtypography="body-2-bold"
      >
        %
      </span>
      
    </div>
  </div>
</div>
`;

exports[`Input examples TemplateDrivenFormInputComponent should render correctly 1`] = `
<div>
  <form
    class="ng-untouched ng-pristine v-gap-16 v-flex v-flex-col ng-invalid"
    novalidate=""
    vflex=""
    vflexcol=""
    vgap="16"
  >
    <div
      class="v-gap-4 v-flex v-flex-col"
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <label
        class="v-label"
        for="template-input-1"
        id="a-v-label-0"
        v-label=""
      >
        Label (required)
      </label>
      <div
        class="v-input-container v-surface"
        v-input-container=""
      >
        <input
          aria-describedby="template-input-message-1"
          aria-invalid="false"
          class="v-input ng-untouched ng-pristine ng-invalid"
          id="template-input-1"
          name="template1"
          ngmodel=""
          required=""
          v-input=""
          value=""
        />
        
      </div>
      <span
        aria-atomic="true"
        aria-live="assertive"
        class="v-input-message"
        id="template-input-message-1"
        v-input-message=""
      >
        
      </span>
    </div>
    <div
      class="v-gap-4 v-flex v-flex-col"
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <label
        class="v-label"
        for="template-input-2"
        id="a-v-label-1"
        v-label=""
      >
        Label (required)
      </label>
      <div
        class="v-input-container v-surface"
        v-input-container=""
      >
        <input
          aria-describedby="template-input-message-2"
          aria-invalid="false"
          class="v-input ng-untouched ng-pristine ng-invalid"
          id="template-input-2"
          name="template2"
          ngmodel=""
          required=""
          v-input=""
          value=""
        />
        
      </div>
      <span
        aria-atomic="true"
        aria-live="assertive"
        class="v-input-message"
        id="template-input-message-2"
        v-input-message=""
      >
        
      </span>
    </div>
    <div
      class="v-gap-4 v-flex v-flex-col"
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <label
        class="v-label"
        for="template-input-3"
        id="a-v-label-2"
        v-label=""
      >
        Label (required)
      </label>
      <div
        class="v-input-container v-surface"
        v-input-container=""
      >
        <input
          aria-describedby="template-input-message-3"
          aria-invalid="false"
          class="v-input ng-untouched ng-pristine ng-invalid"
          id="template-input-3"
          name="template3"
          ngmodel=""
          required=""
          v-input=""
          value=""
        />
        
      </div>
      <span
        aria-atomic="true"
        aria-live="assertive"
        class="v-input-message"
        id="template-input-message-3"
        v-input-message=""
      >
        
      </span>
    </div>
    <div
      class="v-gap-16 v-flex v-flex-row"
      vflex=""
      vgap="16"
    >
      <button
        class="v-button"
        type="submit"
        v-button=""
      >
        Submit
      </button>
      <button
        buttoncolor="secondary"
        class="v-button v-button-secondary"
        type="reset"
        v-button=""
      >
         Reset 
      </button>
    </div>
  </form>
</div>
`;

exports[`Input examples TemplateDrivenInputComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="template-input"
      id="a-v-label-0"
      v-label=""
    >
      Label (required)
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <input
        class="v-input ng-untouched ng-pristine ng-valid"
        id="template-input"
        required=""
        v-input=""
        value="John Doe"
      />
      
    </div>
  </div>
  <code>
    Value: John Doe
  </code>
</div>
`;

exports[`Input examples TextareaWithFixedHeightAndResizeInputComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="fixed-height-and-resize-textarea"
      id="a-v-label-0"
      v-label=""
    >
      Label (required)
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <textarea
        class="v-input"
        id="fixed-height-and-resize-textarea"
        required=""
        style="block-size: 130px;"
        v-input=""
        value=""
      />
      
    </div>
  </div>
</div>
`;

exports[`Input examples TextareaWithFixedHeightInputComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="fixed-height-textarea"
      id="a-v-label-0"
      v-label=""
    >
      Label (required)
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <textarea
        class="v-input v-input-resize-none"
        id="fixed-height-textarea"
        noresize=""
        required=""
        style="block-size: 130px;"
        v-input=""
        value=""
      />
      
    </div>
  </div>
</div>
`;

exports[`Input examples TextareaWithNativeRowsAttributeInputComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="native-rows-textarea"
      id="a-v-label-0"
      v-label=""
    >
      Label (required)
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <textarea
        class="v-input v-input-resize-none"
        id="native-rows-textarea"
        noresize=""
        required=""
        rows="3"
        v-input=""
        value=""
      />
      
    </div>
  </div>
</div>
`;

exports[`Input examples TextareaWithResizeInputComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="resize-textarea"
      id="a-v-label-0"
      v-label=""
    >
      Label (required)
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <textarea
        class="v-input"
        id="resize-textarea"
        required=""
        v-input=""
        value=""
      />
      
    </div>
  </div>
</div>
`;

exports[`Input examples TextareaWithoutResizeInputComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="no-resize-textarea"
      id="a-v-label-0"
      v-label=""
    >
      Label (required)
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <textarea
        class="v-input v-input-resize-none"
        id="no-resize-textarea"
        noresize=""
        required=""
        v-input=""
        value=""
      />
      
    </div>
  </div>
</div>
`;

exports[`Input examples WithActionButtonInputComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="action-button"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <input
        class="v-input"
        id="action-button"
        type="text"
        v-input=""
        value=""
      />
      <button
        aria-label="hide password"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-tertiary"
        type="button"
        v-button-icon=""
      >
        
        <svg
          aria-hidden="true"
          class="v-icon v-icon-password-hide v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-password-hide-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-secondary"
            d="M15.7129 1.7041L1.71289 15.7041L0.298828 14.29L14.2988 0.290039L15.7129 1.7041Z"
          />
          <path
            class="v-icon-primary"
            d="M15.4697 7.00873C15.9646 7.57424 15.9645 8.41878 15.4697 8.98431L13.2734 11.4951C11.5201 13.4988 8.90961 14.2413 6.51953 13.7255L8.37598 11.8691C9.63294 11.7764 10.8615 11.2143 11.7686 10.1777L13.6768 7.99701L13.0098 7.23529L14.4277 5.81732L15.4697 7.00873ZM2.7373 4.49896C4.49055 2.49525 7.1012 1.75193 9.49121 2.26752L7.63574 4.12299C6.37849 4.21545 5.14939 4.77954 4.24219 5.81635L2.33398 7.99701L3 8.75873L1.58301 10.1757L0.541016 8.98431C0.0463642 8.41877 0.0462356 7.57419 0.541016 7.00873L2.7373 4.49896Z"
          />
        </svg>
        
      </button>
      
    </div>
  </div>
</div>
`;

exports[`Input examples WithClearTextButtonInputComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="button-input"
      id="a-v-label-0"
      v-label=""
    >
      Label (required)
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <input
        class="v-input"
        id="button-input"
        required=""
        v-input=""
        value=""
      />
      
      
    </div>
  </div>
</div>
`;

exports[`Input examples WithMaskedFieldInputComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-4 v-flex v-flex-col"
    vflex=""
    vflexcol=""
    vgap="4"
  >
    <label
      class="v-label"
      for="masked-field"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      class="v-input-container v-surface"
      v-input-container=""
    >
      <input
        class="v-input"
        id="masked-field"
        type="password"
        v-input=""
        value="password"
      />
      <button
        aria-label="show password"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-button-icon v-button-small v-button-tertiary"
        type="button"
        v-button-icon=""
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-password-show v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-password-show-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M2.73145 4.50195C5.52032 1.31466 10.4787 1.31466 13.2676 4.50195L15.4639 7.01172C15.9587 7.57726 15.9587 8.42177 15.4639 8.9873L13.2676 11.498C10.4787 14.6851 5.52027 14.6852 2.73145 11.498L0.535156 8.9873C0.0404386 8.42177 0.0403542 7.57721 0.535156 7.01172L2.73145 4.50195ZM11.7627 5.81836C9.77061 3.54192 6.22833 3.54181 4.23633 5.81836L2.32812 8L4.23633 10.1807C6.22838 12.4573 9.77064 12.4573 11.7627 10.1807L13.6709 8L11.7627 5.81836ZM8 6C9.10442 6.00017 10 6.89554 10 8C10 9.10446 9.10442 9.99983 8 10C6.89543 10 6 9.10457 6 8C6 6.89543 6.89543 6 8 6Z"
          />
        </svg>
        
        
      </button>
      
    </div>
  </div>
</div>
`;
